<resources>
    <string name="app_name">FKContactts</string>
    <string name="action_settings">Settings</string>

    <string name="heading_name">Name:</string>
    <string name="eca_name_hint">Enter your friends name…</string>
    <string name="heading_number">Phone Number</string>
    <string name="eca_phone_hint">Type your friends phone number</string>
    <string name="eca_save">Save</string>
</resources>
