<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/editcontact_image"
        android:background="#000000">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="@string/heading_name"/>

        <EditText
            android:id="@+id/eca_name"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:hint="@string/eca_name_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/heading_number"/>

        <EditText
            android:id="@+id/eca_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:hint="@string/eca_phone_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/eca_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_gravity="bottom|end"
        android:text="@string/eca_save"/>

</LinearLayout>